--- a/style.css
+++ b/style.css
@@ -21,5 +21,28 @@ section {
 
 .chamda-texto {
     margin-right: 5%;
+
+}
+h1 {
+font-size: 40
+}
+
+p {
+    font-size: 20px;
+}
+
+img {
+    height: 200px;
+}
+
+.categoria-videos {
+    display: flex;
+    overflow-x: auto;
+    gap: 10px;
+}
+
+.categoria {
+    padding-left: 20px;
+    padding-right: 20px;
 }
  
